# swarm-http-client

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
Config/: build.cmake
Scripts/client/: headers.php  method.php  post.php
Sources/swarm/http/client/: HTTPClient.cxx  HTTPClient.hxx  HTTPClientBuilder.cxx  HTTPClientBuilder.hxx  HTTPResult.cxx  HTTPResult.hxx  HTTPResult.txx
Sources/swarm/http/client/request/: BodyRequest.cxx  BodyRequest.hxx
Sources/swarm/http/client/response/: BodyResponse.cxx  BodyResponse.hxx  InMemoryBodyResponse.cxx  InMemoryBodyResponse.hxx
Tests/: CMakeLists.txt
Tests/swarm/: SimpleHTTPClientTest.cxx
